made improvements to hero image. took off max-width on mobile version so it looks fully responsive. fixed font size with clamp.

--- a/workit.css
+++ b/workit.css
@@ -30,7 +30,7 @@ h2,
   letter-spacing: 0;
 }
 
-h1 {
+.hero-text {
   font-size: 40px;
   font-weight: 400;
   letter-spacing: 0px;
@@ -67,10 +67,10 @@ body {
   padding-bottom: 4px;
 }
 
-section,
+/* section,
 footer {
   max-width: 380px;
-}
+} */
 
 .hero {
   min-height: 390px;
@@ -138,6 +138,7 @@ nav {
 .img-container-hero {
   position: absolute;
   top: 320px;
+  left: 20vw;
   max-width: 380px;
 }
 
@@ -221,8 +222,8 @@ nav {
     margin: 0 120px;
     padding: 15px;
   }
-  h1 {
-    font-size: min(6vw, 80px);
+  .hero-text {
+    font-size: clamp(40px, 6vw, 80px);
     font-weight: 400;
     letter-spacing: 0px;
     width: 80%;
